# auto-claims-harness

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: harness-check.md
agents/: fnol_agent.py
config/: permissions.yaml  thresholds.yaml  tool_allowlist.yaml
docs/: maf-mapping.md  principles.md  stage-0-signoff.md  stage-1-notes.md  stage-1-signoff.md  stage-2-notes.md  stage-2-signoff.md
domain/: calculations.py  models.py  tiers.py
domain/mock_data/: README.md  __init__.py  claims.json  policies.json
evals/: agent_protocol.py  metrics.py  null_agent.py  runner.py  scenarios.py
evals/scenarios/: adversarial-001-unknown-policy.yaml  green-001-clean-collision.yaml  (+3 more)
harness/: providers.py
scripts/: generate_mock_data.py  spike_gated_tool.py
tests/: test_authority_engine.py  test_contracts.py  test_domain_calculations.py  test_domain_models.py  test_domain_tiers.py  test_evals_metrics.py  test_evals_scenarios.py  test_harness_claim_decision_engine.py  test_harness_policy_engine.py  test_mock_data.py  test_mock_repository.py  test_null_agent.py  test_payment_instruction.py  test_permissions_loader.py  test_policy_engine_thresholds.py  test_policy_lookup.py  test_policy_lookup_by_claimant.py  test_policy_lookup_by_number.py  test_providers.py  test_response_normalizer.py  test_tool_allowlist_loader.py  test_tool_authorization_engine.py  test_tool_call_extractor.py  test_tool_gate.py
tools/: __init__.py  payment_instruction.py  policy_lookup.py  policy_lookup_by_claimant.py  policy_lookup_by_number.py
(+21 files in other folders)
